--- a/src/stylesheets/Button.css
+++ b/src/stylesheets/Button.css
@@ -1,25 +1,25 @@
 button {
-    width: 250px;
-    height: 80px;
-    font-size: 35px;
+    width: 150px;
+    height: 40px;
+    font-size: 20px;
     font-family: Roboto, sans-serif;
     font-weight: bold;
     color: white;
     border: 2px solid white;
-    border-radius: 15px;
+    border-radius: 50px;
     margin: 5px;
     cursor: pointer;
   }
   
   button:hover {
-    background-color: #00471b;
+    background-color: #e5c4c5;
   }
   
   .click-button {
-    background-color: #002ead;
+    background-color: #4f828e;
   }
   
   .reset-button {
-    background-color: #5a01a7;
+    background-color: #106c7d;
   }
   
