--- a/src/stylesheets/Counter.css
+++ b/src/stylesheets/Counter.css
@@ -1,13 +1,17 @@
 .counter-container {
-    min-width: 300px;
-    height: 300px;
-    font-size: 160px;
+    min-width: 200px;
+    height: 200px;
+    font-size: 7rem;
     padding: 25px;
     color: white;
+
+    border: 4px solid white;
+    margin-bottom: 15px;
+    border-radius: 29%;
+    background-color: #e5c4c5;
+    
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 8px solid white;
-    margin-bottom: 15px;
-    border-radius: 50%;
+    
 }
