--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   
   html, 
   body {
-    background-image: url('./images/background_pic.png');
+    /*background-image: url('./images/background_pic.png');*/
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #a2ccca;
@@ -19,7 +19,6 @@
     align-items: center;
     justify-content: center;
     padding-top: 15px;
-    font-family: Lato, sans-serif;
   }
 
   
